--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Javascript POO</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
     <h1> Js Objet </h1>
 
+    <!-- click green fonctionnality -->
+    <div class="test"> Test1 </div>
+    <div class="test"> Test2 </div>
+    <div> Test3 </div>
+    <div> Test4 </div>
+    <div class="test"> Test5 </div>
+    <div> Test6 </div>
+    <div class="test"> Test7 </div>
+
+    <!-- Carrousel plugin -->
+    <div id="carrousel">
+        <div class="item item_1"></div>
+        <div class="item item_2"></div>
+        <div class="item item_3"></div>
+        <div class="item item_4"></div>
+    </div>
+
+    <div id="carrousel_2"></div>
+
+    <div id="carrousel_3"></div>
+    
+    <script src="jquery.js"></script>
+    <script src="carrousel_plugin.js"></script>
+    <script src="main.js"></script>
     <script src="Chat.js" ></script>
     <script src="script.js" ></script>
 </body>
