--- a/Cours/index.html
+++ b/Cours/index.html
@@ -31,6 +31,8 @@
     <div id="carrousel_2"></div>
 
     <div id="carrousel_3"></div>
+
+    <input id="customSelect" type="text">
     
     <script src="jquery.js"></script>
     <script src="carrousel_plugin.js"></script>
