Chien + Animal Ecmascript2015 class

--- a/Cours/index.html
+++ b/Cours/index.html
@@ -37,7 +37,9 @@
     <script src="jquery.js"></script>
     <script src="carrousel_plugin.js"></script>
     <script src="main.js"></script>
+    <script src="Animal.js" ></script>
     <script src="Chat.js" ></script>
+    <script src="Chien.js" ></script>
     <script src="script.js" ></script>
 </body>
 </html>
