--- a/Exercices/zerg rush/index.html
+++ b/Exercices/zerg rush/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <div id="score">Score : 0</div>
+
     <script src="js/jquery.js"></script>
     <script src="js/Color.js"></script>
     <script src="js/Zerg.js"></script>
