--- a/Exercices/datepicker/index.html
+++ b/Exercices/datepicker/index.html
@@ -14,6 +14,7 @@
     
     <script src="jquery.js"></script>
     <script src="jquery-ui/jquery-ui.min.js"></script>
+    <script src="App.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
