Maps filtre correction

--- a/Exercices/Maps/index.html
+++ b/Exercices/Maps/index.html
@@ -33,7 +33,36 @@
                     <textarea id="description"></textarea>
             </label>
 
-            <input type="submit">
+            <label>
+                <span>Type :</span>
+                <select id="type">
+                    <option value="Hotel">Hotel</option>
+                    <option value="Restaurant">Restaurant</option>
+                    <option value="Bar">Bar</option>
+                </select>
+            </label>
+
+            <label for="send    ">
+                <span></span>
+                <input type="submit" id="send">
+            </label>
+        </form>
+
+        <hr>
+
+        <form>
+            <label for="hotel"> 
+                <span> Hotels </span>
+                <input type="checkbox" id="hotel" value="Hotel" />
+            </label>
+            <label for="restaurant"> 
+                <span> Restaurants </span>
+                <input type="checkbox" id="restaurant" value="Restaurant" />
+            </label>
+            <label for="bar"> 
+                <span> Bars </span>
+                <input type="checkbox" id="bar" value="Bar">
+            </label>
         </form>
 
     </div>
