Recherche d'element dans un poligone

--- a/Exercices/Maps/index.html
+++ b/Exercices/Maps/index.html
@@ -70,7 +70,7 @@
     <script src="js/lib/jquery.js"></script>
     <script src="js/class/App.js"></script>
     <script src="js/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu4E5Xwm3cA9KM6QrWBdyb9GhyW_rZFUE&callback=app.initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu4E5Xwm3cA9KM6QrWBdyb9GhyW_rZFUE&callback=app.initMap&libraries=geometry"
     async defer></script>
 </body>
 </html>
